--- a/Hola/index.html
+++ b/Hola/index.html
@@ -27,8 +27,8 @@ click here
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <link rel="stylesheet" type="text/css" href="/style.css" />
-    <link rel="alternate" type="application/rss+xml" title="Jorge - Web Developer from Somewhere" href="/feed.xml" />
+    <link rel="stylesheet" type="text/css" href="/p03-t0-aprender-ide-alu-JBF/style.css" />
+    <link rel="alternate" type="application/rss+xml" title="Jorge - Web Developer from Somewhere" href="/p03-t0-aprender-ide-alu-JBF/feed.xml" />
 
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
@@ -37,16 +37,16 @@ click here
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
-          <a href="/" class="site-avatar"><img src="https://avatars.githubusercontent.com/u/50449216?v=4" /></a>
+          <a href="/p03-t0-aprender-ide-alu-JBF/" class="site-avatar"><img src="https://avatars.githubusercontent.com/u/50449216?v=4" /></a>
 
           <div class="site-info">
-            <h1 class="site-name"><a href="/">Jorge</a></h1>
+            <h1 class="site-name"><a href="/p03-t0-aprender-ide-alu-JBF/">Jorge</a></h1>
             <p class="site-description">Web Developer from Somewhere</p>
           </div>
 
           <nav>
-            <a href="/">Blog</a>
-            <a href="/about">About</a>
+            <a href="/p03-t0-aprender-ide-alu-JBF/">Blog</a>
+            <a href="/p03-t0-aprender-ide-alu-JBF/about">About</a>
           </nav>
         </header>
       </div>
@@ -60,7 +60,7 @@ click here
     <p>Next you can update your site name, avatar and other options using the _config.yml file in the root of your repository (shown below).
 <a href="does-not-exist.md">click here</a></p>
 
-<p><img src="/images/config.png" alt="_config.yml" /></p>
+<p><img src="/p03-t0-aprender-ide-alu-JBF/images/config.png" alt="_config.yml" /></p>
 
 <p>The easiest way to make your first post is to edit this one. Go into /_posts/ and update the Hello World markdown file. For more instructions head over to the <a href="https://github.com/barryclark/jekyll-now">Jekyll Now repository</a> on GitHub.</p>
 
